--- a/guides/real-world-integration/performance-optimization.mdx
+++ b/guides/real-world-integration/performance-optimization.mdx
@@ -1,165 +1,201 @@
 ---
-title: "Scaling Test Suites and Performance Optimization"
-description: "Strategies for optimizing the performance of large test suites, including test parallelization, filtering, and selective execution. Understand approaches to reduce execution times and maintain fast feedback cycles."
+title: "Performance and Scaling Your Test Suite"
+description: "Guidance on keeping test runs fast, scaling to large codebases, test sharding and parallelism, and profiling test performance. Helps teams maintain productivity with extensive test suites."
 ---
 
-# Scaling Test Suites and Performance Optimization
+# Performance and Scaling Your Test Suite
 
 ## Overview
 
-Large test suites are critical for ensuring software quality but can introduce challenges related to test execution time and feedback latency. This guide presents strategies and best practices to optimize the performance of extensive test suites when using GoogleTest, helping you keep tests fast and maintain a productive development workflow.
+Large codebases benefit from extensive test suites, but as the number of tests grows, keeping test execution fast and efficient becomes critical to sustaining development productivity. This guide helps you understand how to maintain high-performance test runs with GoogleTest, scale to large codebases, and efficiently distribute testing workloads.
 
-## Goals of Test Suite Scaling
+### What You Will Learn
 
-- **Reduce overall execution time:** Enable tests to complete quickly to provide timely feedback.
-- **Maintain test correctness and reliability:** Optimizations should not compromise test independence or thoroughness.
-- **Improve resource utilization:** Efficiently leverage hardware and CI environments.
-- **Simplify maintenance and debugging:** Avoid overly complex setups that obstruct test clarity.
+- How to measure and analyze GoogleTest performance
+- Strategies for optimizing test execution times
+- Techniques for parallelism and test sharding
+- Best practices for profiling and troubleshooting slow tests
 
-## Key Techniques for Performance Optimization
+## Prerequisites
 
-### 1. Test Parallelization
+- Familiarity with writing and running test cases using GoogleTest
+- Understanding of basic test suite concepts (test fixtures, test suites, parameterized tests)
+- Access to the test build environment and ability to run test executables
 
-**What it is:** Running tests concurrently to utilize multiple CPU cores or machines.
+## Expected Outcome
 
-**How to apply:**
+After following this guide, you will be able to:
 
-- **Local parallel execution:** Use test runners or build systems that support parallel test execution such as `--gtest_parallel` wrappers or invoking multiple test binaries in parallel.
-- **Test Sharding:** Split tests into mutually exclusive subsets (shards) and execute each shard on a different machine or process.
-  - Set environment variables `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX` as documented in the [Advanced Guide](docs/advanced.md#running-test-shards).
-
-**Best practices:**
-- Ensure tests are independent and do not rely on shared mutable state.
-- Disable or adjust death tests which may have challenges running correctly in parallel.
-- Use environment isolated test setups to avoid flaky tests.
-
-### 2. Test Filtering and Selection
-
-**What it is:** Running only a relevant subset of tests to optimize cycle times.
-
-**Approaches:**
-
-- **Test name filtering:** Use the `--gtest_filter` flag to include or exclude particular test suites or tests by name patterns.
-  ```
-  ./my_test_binary --gtest_filter=MyTestSuite.*  # Run only tests in MyTestSuite
-  ./my_test_binary --gtest_filter=-*Flaky*       # Run all except tests with "Flaky" in name
-  ```
-- **Disabled tests:** Temporarily prefix troublesome tests with `DISABLED_` to skip during routine runs, re-enable when fixes are available.
-- **Incremental runs:** Use custom scripts or CI logic to run subsets of tests affected by recent code changes.
-
-**Tips:**
-- Combine filtering with parallelization to achieve rapid feedback on critical paths.
-- Use naming conventions consistently for easier filter expressions.
-
-### 3. Test Fixture and Resource Optimization
-
-**Context:** Expensive setup and teardown for test fixtures can slow tests significantly.
-
-**Strategies:**
-
-- Use `SetUpTestSuite()` and `TearDownTestSuite()` instead of `SetUp()` and `TearDown()` to share expensive resources among tests in the same test suite.
-  ```c++
-  class MyTest : public ::testing::Test {
-  protected:
-    static void SetUpTestSuite() {
-      resource_ = new ExpensiveResource();
-    }
-    static void TearDownTestSuite() {
-      delete resource_;
-      resource_ = nullptr;
-    }
-
-    static ExpensiveResource* resource_;
-  };
-
-  ExpensiveResource* MyTest::resource_ = nullptr;
-  ```
-- Cache and reuse connections, files, or data needed across multiple tests, but ensure tests maintain isolation.
-
-### 4. Avoiding Global Test Contention and Side Effects
-
-- Avoid unwarranted shared global state that can cause serialization or flakiness in parallel or repeated runs.
-- Prefer test fixtures over global variables for better isolation.
-
-### 5. Skipping or Disabling Flaky or Slow Tests
-
-- Mark flaky tests `DISABLED_` to keep them from affecting speed until they are fixed.
-- Use the `GTEST_SKIP()` macro to conditionally skip tests at runtime when preconditions are unmet.
-
-### 6. Efficient Test Execution Order
-
-- Use the `--gtest_shuffle` flag to randomize test order and discover unexpected dependencies.
-- Repeat runs with `--gtest_repeat` to detect flaky tests.
-- Consider grouping related tests into suites to improve cache/locality and execution efficiency.
-
-### 7. Generating and Using Test Reports
-
-- Enable XML or JSON output with `--gtest_output=xml:filename.xml` or `--gtest_output=json:filename.json` to integrate with CI dashboards and measure test duration.
-
-## Sample Workflow: Parallel, Filtered Test Execution
-
-1. Divide tests into shards based on changes or logical grouping by setting `GTEST_TOTAL_SHARDS` and `GTEST_SHARD_INDEX`.
-2. Use `--gtest_filter` on each shard to run only relevant tests.
-3. Run shards in parallel across machines or containers.
-4. Merge results using XML reports for a complete status.
-
-## Best Practices Summary
-
-- Use **independent tests** for reliable parallel execution.
-- Prefer **test fixtures** with shared setup/teardown for expensive resources.
-- Use **filtering and disabling** to focus runs on critical or stable tests.
-- Employ **sharding** in CI systems for scalability.
-- Enable **reporting** to monitor test durations and failures.
-- Regularly **shuffle and repeat** tests to detect non-determinism.
-
-## Troubleshooting Common Performance Pitfalls
-
-| Issue                                   | Solution                                   |
-|-----------------------------------------|--------------------------------------------|
-| Tests run serially despite resources    | Verify test independence, avoid globals, use sharding or parallel runners. |
-| Death tests hanging or failing in parallel | Run death tests separately or in "threadsafe" mode (`GTEST_FLAG_SET(death_test_style, "threadsafe")`). |
-| Test fixtures with expensive setup per test | Use `SetUpTestSuite` / `TearDownTestSuite` for shared fixtures. |
-| Flaky or timing-dependent tests          | Disable or isolate flaky tests; add explicit synchronization or mocks. |
-
-## Additional Resources
-
-- [GoogleTest Primer](primer.md) – Getting started with simple tests.
-- [Advanced Guide](advanced.md) – Deep dive into fixtures, death tests, and flags.
-- [Running Tests](getting-started/first-test-run/run-tests.md) – How to run and filter tests.
-- [Death Tests Guide](guides/core-workflows/death-tests.mdx) – Special considerations for death tests.
-- [Integration with Build Systems](overview/use-cases-integration/integration-with-build-systems.mdx) – Setting up with CMake or Bazel.
-
-## Practical Tips
-
-- Use **`GTEST_FLAG_SET(death_test_style, "threadsafe")`** in main() for safer death tests in concurrent environments.
-- Run tests with `--gtest_repeat=N` along with sharding and filtering to isolate flaky tests.
-- Use continuous integration to run full test suites regularly while relying on filtered and parallel runs for developer feedback.
+- Profile and identify slow tests or bottlenecks
+- Apply practical methods to speed up test execution
+- Leverage parallelism and sharding to scale test runs on multiple machines or cores
+- Maintain productivity on growing projects
 
 ---
 
-# Diagram: Basic Test Execution Flow with Sharding and Parallelism
+## Step 1: Profiling Test Suite Performance
 
-```mermaid
-flowchart TD
-  Start([Start Test Execution]) --> Init[Initialize GoogleTest]
-  Init --> Filter[Apply --gtest_filter]
+Understanding where your test suite spends time is key to optimizing it.
 
-  Filter --> ShardCheck{Are shards enabled?}
-  ShardCheck -->|Yes| AssignShard[Assign tests to current shard]
-  ShardCheck -->|No| RunAllTests[Run all selected tests]
+### Measure Total Test Time
 
-  AssignShard --> ParallelExec[Run tests in parallel]
-  RunAllTests --> ParallelExec
+Run your test suite with the `--gtest_print_time=1` flag (enabled by default) to get per-test and total timing information.
 
-  ParallelExec --> ResultsCollect[Collect Test Results]
-  ResultsCollect --> ReportOutput[Generate XML/JSON/Test Log]
-  ReportOutput --> Done([Test Execution Complete])
+```sh
+./my_test --gtest_print_time=1
 ```
 
-This flow shows how GoogleTest processes filtered tests, optionally shards them for parallel execution, collects results and generates reports.
+This outputs the elapsed time for each test, helping you identify unusually slow tests.
+
+### Generate Detailed Reports
+
+Create an XML or JSON output report to analyze test durations post-run:
+
+```sh
+./my_test --gtest_output=xml:report.xml
+# or
+./my_test --gtest_output=json:report.json
+```
+
+Use the reports to find tests consuming excessive time.
+
+<Tip>
+Enabling `--gtest_brief=1` reduces output clutter by showing only failures and summary, which can simplify profiling.
+</Tip>
+
+### Use External Profiling Tools
+
+Profilers like `perf` (Linux), Visual Studio Profiler (Windows), or `Instruments` (macOS) can provide insights into test execution hotspots.
+
+<Tip>
+Run a single slow test in isolation to profile and reduce noise.
+</Tip>
 
 ---
+
+## Step 2: Optimizing Test Execution
+
+Once slow tests are identified, apply the following techniques:
+
+### Use Test Fixtures Wisely
+
+- Minimize setup and teardown code in each test.
+- Use `SetUpTestSuite()` and `TearDownTestSuite()` for expensive one-time initialization shared by all tests.
+
+### Reduce External Dependencies
+
+- Mock or stub out expensive I/O, network, or database operations.
+- Limit reliance on global state or complex environment setup.
+
+### Minimize Test Workload
+
+- Avoid unnecessary loops or heavy calculations inside tests.
+- Break large tests into smaller, more focused ones when possible.
+
+### Skip or Disable Unstable/Slow Tests
+
+- Temporarily disable flaky or very slow tests with the `DISABLED_` prefix.
+- Use `GTEST_SKIP()` at runtime to skip tests based on environment conditions.
+
+### Reduce Test Output
+
+- Excessive logging slows tests and pollutes output. Consider reducing output or redirecting logs.
+
+---
+
+## Step 3: Leveraging Parallelism
+
+Distribute test execution to utilize all available CPU cores or machines.
+
+### Use CTest or Build System Parallelism
+
+If using CMake and CTest, run tests in parallel:
+
+```sh
+ctest --parallel N
+```
+
+Where `N` is the number of jobs/cores.
+
+### GoogleTest Flag for Threads
+
+Run tests in parallel threads by setting GoogleTest flags accordingly (`--gtest_jobs=N`) if supported by the environment (currently GoogleTest core is not inherently parallel-safe, so external parallelization is preferred).
+
+### Test Sharding
+
+Divide tests into shards to run subsets concurrently on multiple machines:
+
+1. Set environment variables for each shard:
+
+```sh
+export GTEST_TOTAL_SHARDS=M      # total number of shards
+export GTEST_SHARD_INDEX=I       # index of current shard, 0 <= I < M
+```
+
+2. Run the test executable on all shards simultaneously.
+
+GoogleTest automatically runs a portion of tests assigned to each shard.
+
+<Tip>
+Ensure all tests are independent to avoid interference in parallel execution.
+</Tip>
+
+---
+
+## Step 4: Profiling and Troubleshooting Slow Tests
+
+### Identify Test Bottlenecks
+
+- Use `--gtest_repeat=N` to run tests multiple times and observe timing consistency.
+- Use `--gtest_shuffle` to uncover dependency issues causing variability.
+
+### Troubleshoot Hanging or Long-Running Tests
+
+- Inspect code for external resource locking or infinite loops.
+- Use `EXPECT_DEATH` or similar to catch code known to hang.
+- Check for shared state causing contention.
+
+### Optimize Test Data
+
+- Use smaller datasets in tests if feasible.
+- Cache or precompute expensive inputs.
+
+---
+
+## Best Practices
+
+- Write fast, focused tests by default; favor unit tests over integration tests for speed.
+- Use mocking to replace slow dependencies.
+- Organize tests to allow selective execution using `--gtest_filter`.
+- Regularly profile your test suite as code and tests evolve.
+- Use parallelism for large suites but ensure tests are thread-safe and isolated.
+- Use `SetUpTestSuite` and `TearDownTestSuite` judiciously to share expensive setup.
+
+---
+
+## Related Features and Flags
+
+| Feature/Flag               | Purpose                                                      |
+|---------------------------|--------------------------------------------------------------|
+| `--gtest_repeat=N`        | Repeat tests N times                                          |
+| `--gtest_shuffle`         | Run tests in random order                                     |
+| `--gtest_filter=pattern`  | Run only tests matching pattern                               |
+| `--gtest_break_on_failure`| Break into debugger on failures                               |
+| Sharding (`GTEST_TOTAL_SHARDS`, `GTEST_SHARD_INDEX`) | Divides tests across shards for distributed runs  |
 
 ## Summary
 
-Optimizing large GoogleTest suites involves parallel execution, selective test filtering, smart fixture design, and test sharding. Employ these practices to reduce feedback cycle times and maintain healthy test coverage.
+Scaling your GoogleTest test suite requires a proactive approach to profiling, optimizing, and parallelizing tests. By applying these strategies, you ensure timely feedback in continuous integration, efficient developer cycles, and maintainable test code.
+
+---
+
+## Next Steps & Resources
+
+- [Guides: Continuous Integration & Build System Integration](/guides/real-world-integration/ci-build-integration)
+- [Platform & Toolchain Support](/overview/integration-and-ecosystem/platform-support)
+- [Testing Reference](reference/testing.md)
+- [Assertions Reference](reference/assertions.md)
+
+<Tip>
+Explore automated test runners and build integrations that support sharding and parallel execution, especially for large monorepos.
+</Tip>
