--- a/concepts/core-architecture/system-overview.mdx
+++ b/concepts/core-architecture/system-overview.mdx
@@ -1,267 +1,197 @@
 ---
 title: "System Overview"
-description: "Presents the principal components of GoogleTest and GoogleMock, including how test cases are structured, how mocks are constructed, and the overarching flow of test execution. Provides the big picture for users, mapping major abstractions and how they interact."
+description: "An introduction to the unified architecture of GoogleTest and GoogleMock, clarifying how core modules orchestrate test discovery, execution, assertion handling, and mocking. Build a clear mental model of the C++ testing pipeline."
 ---
 
 # System Overview
 
-GoogleTest and GoogleMock are the foundation of a powerful C++ testing framework that helps developers write unit tests with confidence. This page presents the principal components of both GoogleTest and GoogleMock, illustrating how test cases are structured, how mocks are constructed, and how the overall test execution flow is orchestrated. Understanding these core abstractions and their interactions provides the big picture necessary for writing effective and maintainable tests.
+## Introduction
+
+GoogleTest and GoogleMock form a comprehensive, unified testing framework designed to empower C++ developers with robust tools for test discovery, execution, assertion verification, and mocking. Together, they streamline the process of writing and running tests by orchestrating a modular yet coherent pipeline that ensures reliable, maintainable, and scalable testing.
+
+This guide introduces the core architecture of GoogleTest and GoogleMock, focusing on how their main modules interact to deliver a seamless testing experience. It lays a foundation for understanding how tests are discovered, executed, and reported, and how mocking integrates into this ecosystem.
 
 ---
 
-## Test Cases and Test Suites
+## Core Modules and Workflow
 
-At the heart of GoogleTest lies the concept of a **Test Case**, which groups together related test functions called **Tests**. Each test is a function that verifies a particular aspect of your code.
+GoogleTest and GoogleMock operate through a sequence of well-defined stages, each involving specific core modules responsible for distinct facets of the testing process. Understanding these modules and their interplay builds a clear mental model of the test pipeline.
 
-- **Test Suites** (previously called Test Cases in older versions) are collections of related tests, allowing logical grouping.
-- Tests are defined using macros like `TEST` and `TEST_F`, enabling structured organization and reuse of setup code.
+### 1. Test Discovery and Registration
 
-A typical flow when writing and running tests is:
+- **Test Macros (`TEST()`, `TEST_F()`, `TEST_P()` etc.)**
+  - User-written test functions are registered automatically when defined.
+  - Each test is registered as a `TestInfo` instance associated with a `TestSuite`.
 
-1. Define a test suite and one or more test cases.
-2. Write assertions within tests to verify expected behaviors.
-3. Compile and run all or selected tests.
+- **TestSuite and TestInfo Objects**
+  - `TestSuite`: Groups logically related tests, mirroring the structure of the tested code.
+  - `TestInfo`: Represents an individual test, storing metadata like name, file location, parameters, and the factory function to create test instances.
 
-Example:
+- **Registration APIs**
+  - Registration ensures tests are discoverable without explicit enumeration.
+  - Advanced users may use dynamic test registration via `RegisterTest()` to create tests programmatically.
 
-```cpp
-TEST(MathTest, Addition) {
-  EXPECT_EQ(2 + 2, 4);
-}
-```
+### 2. Test Execution Controller
 
-Here, `MathTest` is the test suite, and `Addition` is the test case verifying addition.
+- **`UnitTest` Singleton**
+  - Central orchestrator of the test run.
+  - Holds all registered `TestSuite`s.
+  - Initiates the execution sequence when `RUN_ALL_TESTS()` is called.
 
-<Check>
-Using `TEST_F` allows leveraging fixtures — shared setup and teardown code — across multiple tests in a suite.
-</Check>
+- **Execution Flow:**
+  1. Initializes global test environments by invoking registered `Environment::SetUp()`.
+  2. Iterates through test suites, running their associated tests one by one.
+  3. For each test:
+     - Creates a fresh test fixture object.
+     - Runs `SetUpTestSuite()` once per suite before first test, and `TearDownTestSuite()` after last test.
+     - Calls `SetUp()` and `TearDown()` for each individual test.
+     - Executes the test body, monitoring assertions.
+  4. Runs global teardown by calling `Environment::TearDown()`.
 
-## Test Fixtures
+- **Isolation and Repeatability**
+  - Each test runs in a clean fixture instance, ensuring independence.
+  - Fatal failures within a test abort that test but not the entire suite.
+  
+### 3. Assertions and Failures
 
-**Test Fixtures** are classes that provide setup and teardown hooks around tests to eliminate redundant code.
+- **Assertion Macros (`EXPECT_*`, `ASSERT_*`, `FAIL`, `SUCCEED`)**
+  - Assert conditions and control test flow.
+  - Non-fatal (`EXPECT_*`) continue test after failure.
+  - Fatal (`ASSERT_*`) abort the current function on failure.
 
-- Use `TEST_F` macro to write tests that leverage fixtures.
-- Fixtures define `SetUp()` and `TearDown()` methods called before and after each test.
+- **Result Reporting**
+  - `TestPartResult`: encapsulates each assertion’s outcome (success, non-fatal failure, fatal failure, skipped).
+  - Failures include contextual information: file, line, and messages.
+  - Multiple failures can be reported per test to provide comprehensive feedback.
 
-Example:
+### 4. Test Fixture and Resource Management
 
-```cpp
-class DatabaseTest : public ::testing::Test {
- protected:
-  void SetUp() override {
-    // Initialize test database
-  }
+- **Fixtures (`Test`, derived classes)**
+  - Provide per-test setup/teardown and shared resources.
+  - Support `SetUpTestSuite()` and `TearDownTestSuite()` for expensive shared resource management.
 
-  void TearDown() override {
-    // Cleanup test database
-  }
-};
+- **Value-Parameterized and Typed Tests**
+  - Extend fixtures to support multiple input data and type variations effortlessly.
 
-TEST_F(DatabaseTest, Insert) {
-  // Test the insert function with the prepared database
-}
-```
+### 5. Test Event Listeners
 
-This pattern promotes reusable setup and keeps tests clean and focused.
+- **`TestEventListener` Interface**
+  - Enables hooking into the lifecycle of test runs.
+  - Receives callbacks for events like test start/end, assertion results, and test iteration.
+  - Supports custom output formatting, integration with CI systems, or diagnostic tools.
 
-## Mock Objects and Mock Classes
+- **Default Listeners**
+  - Console output printer.
+  - XML and JSON report generators.
 
-GoogleMock extends GoogleTest by allowing dependency mocking to isolate and verify interactions with dependencies in your tests.
+### 6. Mocking Integration (GoogleMock)
 
-### Defining a Mock Class
+- **Mock Objects**
+  - Defined as subclasses of `testing::Mock` with mocked methods.
+  - Expectations (`EXPECT_CALL`) set behaviors and verify interactions.
 
-To mock an interface or abstract class, derive a mock class and declare mock methods using the `MOCK_METHOD` macro.
+- **Seamless Coexistence**
+  - Mocking framework integrates naturally into the GoogleTest lifecycle.
+  - Tests calling mock objects participate fully in the assertion and reporting system.
 
-A mock method has the signature:
+---
 
-```cpp
-MOCK_METHOD(return_type, MethodName, (Args...), (qualifiers));
-```
-
-where `qualifiers` may include `const`, `override`, `noexcept`, and calling conventions.
-
-Example:
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo();
-  virtual int GetSize() const = 0;
-  virtual std::string Describe(const char* name) = 0;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(std::string, Describe, (const char* name), (override));
-};
-```
-
-### Handling Overloaded and Template Methods
-
-- Overloaded methods can all be mocked with corresponding `MOCK_METHOD` declarations.
-- Class templates require mocking each template specialization.
-
-### Special Wrappers: NiceMock, NaggyMock, StrictMock
-
-To control how uninteresting calls (calls with no expectations) are treated, GoogleMock provides wrappers:
-
-- **NiceMock**: Suppresses warnings for uninteresting calls.
-- **NaggyMock**: The default behavior that warns on uninteresting calls.
-- **StrictMock**: Treats uninteresting calls as errors.
-
-Example of usage:
-
-```cpp
-using ::testing::NiceMock;
-NiceMock<MockFoo> nice_foo;
-EXPECT_CALL(nice_foo, GetSize());
-```
-
-<Note>
-Use these wrappers to tune test strictness and maintainability.
-</Note>
-
-### Setting Expectations and Behaviors
-
-The core mechanism in GoogleMock is setting expectations on mock methods.
-
-- Use `EXPECT_CALL(mock_object, Method(matchers))` to specify how the mock should be called.
-- Apply modifiers to control call count (`Times`), call order (`InSequence`), and call behavior (`WillOnce`, `WillRepeatedly`).
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, Describe(::testing::Eq("test")))
-    .Times(2)
-    .WillOnce(::testing::Return("first result"))
-    .WillRepeatedly(::testing::Return("subsequent result"));
-```
-
-### Default Actions
-
-- Use `ON_CALL` to specify default behavior without necessarily expecting the call.
-- If no actions or expectations are specified, GoogleMock uses default actions appropriate for the return type.
-
-## Test Execution Flow
-
-Understanding how tests run clarifies how expectations are enacted.
-
-1. **Test runner** discovers and filters tests.
-2. Each test is run from `SetUp()` through the test body to `TearDown()`.
-3. During execution, mock methods are invoked according to the expectations.
-4. On destruction of mocks, GoogleMock verifies that all expectations were satisfied and reports failures otherwise.
-
-<Steps>
-<Step title="Initialize Test Environment">
-The test runner processes command-line args and initializes GoogleTest and GoogleMock.
-</Step>
-<Step title="Run Each Test Suite">
-For each test suite, each test executes setup, test code, and teardown in sequence.
-</Step>
-<Step title="Mock Interaction">
-Mocks accept calls; GoogleMock matches calls against expectations or default actions.
-</Step>
-<Step title="Verify Expectations">
-Upon mock destruction, GoogleMock verifies all expectations were met, failing the test if not.
-</Step>
-</Steps>
-
-## User Workflow Example
-
-Imagine you want to test a component that depends on a `Database` interface:
-
-1. Define a mock of the `Database` interface:
-
-```cpp
-class MockDatabase : public Database {
- public:
-  MOCK_METHOD(bool, Connect, (const std::string& url), (override));
-  MOCK_METHOD(int, Query, (const std::string& query_str), (override));
-};
-```
-
-2. Create a test fixture using the mock:
-
-```cpp
-class MyComponentTest : public ::testing::Test {
- protected:
-  MockDatabase mock_db;
-  MyComponent component{&mock_db};
-};
-```
-
-3. Write a test case with expectations:
-
-```cpp
-TEST_F(MyComponentTest, ConnectsAndQueries) {
-  EXPECT_CALL(mock_db, Connect("mydb://url")).WillOnce(::testing::Return(true));
-  EXPECT_CALL(mock_db, Query("SELECT * FROM users")).WillOnce(::testing::Return(42));
-
-  bool connected = component.Initialize();
-  EXPECT_TRUE(connected);
-  int result = component.GetUserCount();
-  EXPECT_EQ(result, 42);
-}
-```
-
-This user journey demonstrates effective use of GoogleTest and GoogleMock components to precisely specify behavior and verify interactions.
-
-## Practical Tips and Best Practices
-
-- Always mock interfaces or abstract classes rather than concrete classes.
-- Prefer `NiceMock` for less brittle tests unless strict behavior verification is required.
-- Use sequences and ordering rules when call order matters.
-- Use `ON_CALL` to specify default behavior to avoid unexpected failures.
-- When mocking overloads or template methods, ensure all variants are covered or `using` declarations are included.
-- Carefully choose cardinalities with `Times` to avoid flaky tests.
-
-## Common Pitfalls
-
-- Forgetting to mark bases' destructors as `virtual` can cause resource leaks.
-- Setting expectations after exercising the mock leads to undefined behavior.
-- Over-specifying matchers and expectations makes tests brittle.
-- Not using `RetiresOnSaturation` when multiple expectations cover similar calls can cause expectation stickiness issues.
-
-## Related Concepts and Cross-References
-
-For deeper understanding, explore these related pages:
-
-- [Mocking Methods and Classes](/api-reference/mocking-api/mock-methods): Detailed guide on declaring and implementing mocks.
-- [Setting Expectations and Actions](/api-reference/mocking-api/expectations-actions): Comprehensive treatment of `EXPECT_CALL` and `ON_CALL` syntax and semantics.
-- [Controlling Mock Behavior](/api-reference/mocking-api/mock-behavior-control): Explains `NiceMock`, `NaggyMock`, and `StrictMock` wrappers.
-- [Test Structure and Lifecycle](/api-reference/core-api/test-structure): Insights into test fixtures, setup, and teardown.
-
-## Diagrammatic Overview
+## Data Flow in the Testing Pipeline
 
 ```mermaid
 flowchart TD
-  subgraph Tests
-    TestSuite1[Test Suite]
-    TestSuite1 --> Test1[Test 1]
-    TestSuite1 --> Test2[Test 2]
-  end
+  UserCode[Test Code with TEST() / TEST_F() Macros] --> RegisterTests[Registration of \nTestInfo and TestSuite Objects]
+  RegisterTests --> UnitTestInstance[UnitTest Singleton]
+  UnitTestInstance --> SetupGlobal[Global Environment SetUp()]
+  SetupGlobal --> TestSuiteLoop[For Each TestSuite]
+  TestSuiteLoop --> SetupSuite[Call SetUpTestSuite()]
+  SetupSuite --> TestLoop[For Each Test]
+  TestLoop --> CreateFixture[Create Fixture Instance]
+  CreateFixture --> SetUpTest[Fixture SetUp()]
+  SetUpTest --> RunTest[Run TestBody()]
+  RunTest --> Assertions[Check Assertions]
+  Assertions --> RecordResults[Record TestPartResult]
+  RecordResults --> TearDownTest[Fixture TearDown()]
+  TearDownTest --> DeleteFixture[Destroy Fixture]
+  DeleteFixture --> TestLoop
+  TestLoop --> TearDownSuite[Call TearDownTestSuite()]
+  TearDownSuite --> TestSuiteLoop
+  TestSuiteLoop --> TearDownGlobal[Global Environment TearDown()]
+  TearDownGlobal --> TestSummary[Generate Summary & Reports]
 
-  subgraph Mocks
-    MockClass[Mock Class] --> MockMethod1[Mock Method 1]
-    MockClass --> MockMethod2[Mock Method 2]
-  end
-
-  subgraph TestFlow
-    RunTests[Run Tests]
-    RunTests --> Setup[SetUp()]
-    Setup --> ExecuteTest[Test Execution]
-    ExecuteTest --> Teardown[TearDown()]
-    Teardown --> Verify[Verify Expectations]
-  end
-
-  Test1 -->|Uses| MockClass
-  Test2 -->|Uses| MockClass
-  Verify --> Reports[Reports Success/Failure]
+  classDef module fill:#cce5ff,stroke:#004085,stroke-width:1px;
+  class UserCode,RegisterTests,UnitTestInstance,SetupGlobal,TestSuiteLoop,SetupSuite,TestLoop,CreateFixture,SetUpTest,RunTest,Assertions,RecordResults,TearDownTest,DeleteFixture,TearDownSuite,TearDownGlobal,TestSummary module;
 ```
 
-This flowchart highlights the relationship between test suites, individual tests, mock classes and methods, and the lifecycle of test execution with verification.
+The chart above shows how user tests register into the framework, how the `UnitTest` singleton drives execution with global and per-suite setup/teardown, how fixtures are instantiated per test, and how assertion results flow into test reporting.
 
 ---
 
-For detailed step-by-step examples and advanced usage, consult the guides on mocking and test writing cited throughout this documentation.
+## User Scenarios and Outcomes
+
+### Writing and Organizing Tests
+
+- You define tests using macros like `TEST()` and `TEST_F()`.
+- Tests automatically register with the framework, grouped under appropriate test suites.
+- Fixtures provide shared setup, making data management and resource allocation clean and efficient.
+
+### Running Tests
+
+- Call `RUN_ALL_TESTS()` (usually from your `main()`).
+- GoogleTest initializes environments, filters tests (including disabled ones and sharding), shuffles if requested, and executes tests.
+- Tests run independently and report results detailed by assertions.
+
+### Handling Failures
+
+- Fatal assertion failures abort the current test function but not the whole suite.
+- Non-fatal failures report errors but keep tests running to capture multiple issues.
+- The test program's return code reflects success or failure.
+
+### Extensibility and Custom Reporting
+
+- You may hook into events using the event listener API.
+- Replace default output or add custom diagnostic logic.
+- Collect detailed data for CI pipelines, dashboards or custom tooling.
+
+---
+
+## Best Practices
+
+- Group related tests into meaningful test suites reflecting code structure.
+- Use `TEST_F()` fixtures for tests that require common setup or shared data.
+- Leverage per-suite setup (`SetUpTestSuite()`) for expensive resources.
+- Prefer `EXPECT_*` assertions where it makes sense to continue after failure.
+- Use `ASSERT_*` when continuation after failure is unsafe (e.g., dereferencing pointers after null check).
+- Take advantage of parameterized, typed, and value-parameterized testing to minimize duplication.
+- Use event listeners to integrate custom reporting or logging needs.
+
+---
+
+## Troubleshooting Common Issues
+
+- **Tests Not Running:** Ensure tests are properly registered and linked. Confirm they are not disabled or filtered out by `--gtest_filter`.
+- **Setup/TearDown Not Called:** Verify correct spelling of `SetUp()` / `TearDown()`, and understand static test suite methods vs instance setup.
+- **Unexpected Test Failures:** Check assertion details and trace output for failures. Use `SCOPED_TRACE` to add context.
+- **Test Order Dependencies:** Avoid writing tests that depend on specific ordering; use the shuffle option to detect such cases.
+
+---
+
+## Summary
+
+GoogleTest and GoogleMock compose a robust framework architected around modular, user-friendly components that automatically discover, execute, and report on tests while supporting complex C++ testing needs.
+
+Understanding this architecture equips you to write maintainable, performant tests and extend GoogleTest’s capabilities through fixtures, parameterization, mocking, and event listeners.
+
+---
+
+## Additional Resources
+
+- [GoogleTest Primer](primer.md): A practical introduction for beginners.
+- [Testing Reference](reference/testing.md): Detailed API documentation.
+- [Advanced GoogleTest Topics](advanced.md): Deep dives on specialized testing scenarios.
+- [Test Fixtures and Suites](api_reference/core_testing_api/test_fixtures_and_suites.md)
+- [Assertions and Failures](api_reference/core_testing_api/assertions_and_failures.md)
+- [Mocking and Matchers](api_reference/mocking_and_matchers/mock_object_creation.md)
+- [Event Listener API](docs/samples/sample9_unittest.cc)
+
+Explore these to master the testing workflow, from basics through to sophisticated setup and integration.
